# chat-bot

./: .flake8  .gitignore  Dockerfile  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
src/: __init__.py  run.py  settings.py  version.py
src/chat/: models.py  services.py  utils.py
src/chat/handlers/: commands.py
src/clients/file_server/: client.py  exceptions.py  models.py
src/core/: openai.py
src/database/: models.py  mongo.py  repositories.py
src/speech/: recognizer.py
src/telegram_bot/: commands.py  decorators.py  exception_handler.py  handlers.py  helpers.py  services.py
